<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_active_events">

    <fragment
        android:id="@+id/navigation_active_events"
        android:name="com.example.eventappdicoding.ui.list.ActiveEventsFragment"
        android:label="@string/title_active_events"
        tools:layout="@layout/fragment_active_events" >
        <action
            android:id="@+id/action_activeEvents_to_eventDetail"
            app:destination="@id/navigation_event_detail" />
    </fragment>

    <fragment
        android:id="@+id/navigation_finished_events"
        android:name="com.example.eventappdicoding.ui.list.FinishedEventsFragment"
        android:label="@string/title_finished_events"
        tools:layout="@layout/fragment_finished_events" >
        <action
            android:id="@+id/action_finishedEvents_to_eventDetail"
            app:destination="@id/navigation_event_detail" />
    </fragment>

    <fragment
        android:id="@+id/navigation_event_detail"
        android:name="com.example.eventappdicoding.ui.detail.EventDetailFragment"
        android:label="@string/title_event_detail"
        tools:layout="@layout/fragment_event_detail" >
        <argument
            android:name="eventId"
            app:argType="string" />
    </fragment>

</navigation>